--- a/css/form.css
+++ b/css/form.css
@@ -18,6 +18,14 @@
 .form__button {
     padding: 10px;
     border: none;
-    background: teal;
+    background: hsl(180, 100%, 25%);
     color: white;
+}
+
+.form__button:hover {
+    background: hsl(180, 100%, 30%);
+}
+
+.form__button:active {
+    background: hsl(180, 100%, 35%);
 }
