--- a/css/section.css
+++ b/css/section.css
@@ -1,11 +1,14 @@
 .section {
     margin: 10px 0;
     background: white;
+    box-shadow: 0 0 5px #ddd;
 }
 
 .section__header {
     padding: 20px;
     margin: 0;
+    border-bottom: 1px solid #ddd;
+    font-size: 20px;
 }
 
 .section__body {
