--- a/css/tasks.css
+++ b/css/tasks.css
@@ -1,5 +1,50 @@
 .tasks {
     margin: 0;
-    padding: o;
+    padding: 0;
     list-style: none;
+}
+
+.tasks__item {
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+    grid-gap: 10px;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.tasks__content--done {
+    text-decoration: line-through;
+}
+
+.tasks__button {
+    border: none;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+    color: white;
+}
+
+.tasks__button--toggleDone {
+    background: hsl(120, 61%, 34%);
+}
+
+.tasks__button--toggleDone:hover {
+    background: hsl(120, 61%, 39%);
+}
+
+.tasks__button--toggleDone:active {
+    background: hsl(120, 61%, 44%);
+}
+
+.tasks__button--remove {
+    background: hsl(348, 83%, 47%);
+}
+
+.tasks__button--remove:hover {
+    background: hsl(348, 83%, 52%);
+}
+
+.tasks__button--remove:active {
+    background: hsl(348, 83%, 57%);
 }
