--- a/css/form.css
+++ b/css/form.css
@@ -20,10 +20,12 @@
     border: none;
     background: hsl(180, 100%, 25%);
     color: white;
+    transition: 0.3s;
 }
 
 .form__button:hover {
     background: hsl(180, 100%, 30%);
+    transition: scale(1.1);
 }
 
 .form__button:active {
