--- a/css/section.css
+++ b/css/section.css
@@ -6,9 +6,23 @@
 
 .section__header {
     padding: 20px;
-    margin: 0;
     border-bottom: 1px solid #ddd;
-    font-size: 20px;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+@media(max-width: 767px) {
+    .section__header {
+        grid-template-columns: 1fr;
+    }
+}
+
+.section__title {
+font-size: 20px;
+margin: 0;
 }
 
 .section__body {
