--- a/css/buttons.css
+++ b/css/buttons.css
@@ -8,4 +8,20 @@
     color: teal;
     border: none;
     margin: 0 0 0 20px;
+    transition: color 0.3s;
+}
+
+@media(max-width: 767px) {
+    .buttons__button {
+        flex-basis: 100%;
+        margin: 10px;
+    }
+}
+
+.buttons__button:hover {
+    color: hsl(180, 100%, 35%);
+}
+
+.buttons__button:disabled {
+    color: #ccc;
 }
