--- a/css/form.css
+++ b/css/form.css
@@ -18,16 +18,16 @@
 .form__button {
     padding: 10px;
     border: none;
-    background: hsl(180, 100%, 25%);
+    background-color: hsl(180, 100%, 25%);
     color: white;
     transition: 0.3s;
 }
 
 .form__button:hover {
-    background: hsl(180, 100%, 30%);
+    background-color: hsl(180, 100%, 30%);
     transition: scale(1.1);
 }
 
 .form__button:active {
-    background: hsl(180, 100%, 35%);
+    background-color: hsl(180, 100%, 35%);
 }
