--- a/css/tasks.css
+++ b/css/tasks.css
@@ -27,35 +27,35 @@
     width: 30px;
     height: 30px;
     color: white;
-    transition: background 0.3s;
+    transition: background-color 0.3s;
 }
 
 .tasks__button--toggleDone {
-    background: hsl(120, 61%, 34%);
+    background-color: hsl(120, 61%, 34%);
 }
 
 .tasks__button--toggleDone:hover {
-    background: hsl(120, 61%, 39%);
+    background-color: hsl(120, 61%, 39%);
 }
 
 .tasks__button--toggleDone:active {
-    background: hsl(120, 61%, 44%);
+    background-color: hsl(120, 61%, 44%);
 }
 
 .tasks__button--remove {
-    background: hsl(348, 83%, 47%);
+    background-color: hsl(348, 83%, 47%);
     background-image: url(../images/bin.svg);
     background-size: contain;
 }
 
 .tasks__button--remove:hover {
-    background: hsl(348, 83%, 52%);
+    background-color: hsl(348, 83%, 52%);
     background-image: url(../images/bin.svg);
     background-size: contain;
 }
 
 .tasks__button--remove:active {
-    background: hsl(348, 83%, 57%);
+    background-color: hsl(348, 83%, 57%);
     background-image: url(../images/bin.svg);
     background-size: contain;
 }
