--- a/css/container.css
+++ b/css/container.css
@@ -2,6 +2,6 @@
     max-width: 900px;
     margin: 0 auto;
     padding: 20px;
-    display: block;
+    display: grid;
     word-break: break-word;
 }
